reign_derive/tests/ui/compile_fail/options_trailing_comma.rs
use reign::prelude::*;

fn test() {
    render!(pages::home, status = 100,);
}

fn main() {}
